--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@types/es6-promise": "^0.0.33",
+    "@types/lodash": "^4.14.77",
     "@types/node": "^8.0.28",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
